--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
