--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^3.0.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "recharts": "^1.4.1"
   }
 }
