--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.1",
+    "material-ui-dropzone": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
