--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^3.0.1",
     "material-ui-dropzone": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui": "^1.0.0-beta.16",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "recharts": "^1.4.1"
