--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-ui": "^1.0.0-beta.16",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "recharts": "^1.4.1"
+    "recharts": "^1.4.1",
+    "react-dropzone": "^8.1.0"
   }
 }
