--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "recharts": "^1.4.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
     "react-dropzone": "^8.1.0"
   }
 }
