--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-dropzone": "^8.1.0",
+    "react-md-spinner": "^0.3.0",
     "recharts": "^1.4.1",
     "styled-components": "^4.1.3"
   }
