--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.1",
+    "file-saver": "^2.0.2",
     "material-ui": "^1.0.0-beta.16",
     "material-ui-dropzone": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
